--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "react-test",
   "version": "0.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "server.js",
   "dependencies": {
     "axios": "^0.12.0",
     "babel-core": "^6.18.2",
@@ -31,7 +31,7 @@
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1",
     "body-parser": "^1.9.0",
-    "mongoose": "^3.8.17",
+    "mongoose": "^4.2.6",
     "node-restful": "^0.1.17"
   },
   "devDependencies": {
@@ -40,11 +40,8 @@
     "nodemon": "^1.11.0"
   },
   "scripts": {
-    "dev": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p"
+  "start":"nodemon --exec babel-node -- ./server.js"
   },
-  "proxy":"http://localhost:8080",
   "author": "",
   "license": "ISC"
 }
